--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -20,7 +20,7 @@
 
 _This is a relatively unused feature that is supported by few IdPs._ 
 
-[SDP-SP06]:: The message SHOULD contain an `AssertionConsumerServiceURL` attribute and MUST NOT contain am 'AssertionConsumerServiceIndex' attribute (i.e., the desired endpoint MUST be the default, or identified via the `AssertionConsumerServiceURL` attribute).
+[SDP-SP06]:: The message SHOULD contain an `AssertionConsumerServiceURL` attribute and MUST NOT contain an 'AssertionConsumerServiceIndex' attribute (i.e., the desired endpoint MUST be the default, or identified via the `AssertionConsumerServiceURL` attribute).
 
 [SDP-SP07]:: The `AssertionConsumerServiceURL` value, if present, MUST match an endpoint location expressed in the SP's metadata exactly, without requiring URL canonicalization/normalization. 
 
