--- a/edit/fedinterop/main.adoc
+++ b/edit/fedinterop/main.adoc
@@ -15,9 +15,9 @@
 
 [horizontal]
 Version:: 1.0
-Date:: 2018-03-08
+Date:: 2018-04-18
 Produced by:: Federation Interoperability Work Group
-Status:: Group-Approved Draft
+Status:: Kantara Initiative Recommendation
 
 include::contributors.adoc[]
 
