--- a/edit/fedinterop/main.adoc
+++ b/edit/fedinterop/main.adoc
@@ -16,8 +16,8 @@
 [horizontal]
 Version:: 1.0
 Date:: 2018-04-18
-Produced by:: Federation Interoperability Work Group
-Status:: Kantara Initiative Recommendation
+Location:: https://docs.kantarainitiative.org/fi/wg/rec-saml2-implementation-profile-for-fedinterop.html
+Status:: This document is a Kantara Initiative Recommendation produced by the https://kantarainitiative.org/confluence/display/fiwg/Home[Federation Interoperability Work Group]. It has been approved by the Membership of the Kantara Initiative. See the Kantara Initiative https://kantarainitiative.org/confluence/download/attachments/2293776/Kantara%20Operating%20Procedures%20V2.0-20150226.pdf?version=2&modificationDate=1444240055000&api=v2[Operating Procedures] for more information.
 
 include::contributors.adoc[]
 
