--- a/edit/saml2int/idp_requirements.adoc
+++ b/edit/saml2int/idp_requirements.adoc
@@ -42,6 +42,10 @@ If an IdP cannot prove subject presence, then it MUST fail the request and SHOUL
 
 [SDP-IDP11]:: In the event the HTTP-POST binding <<SAML2Bind>> is used, assertions MUST be encrypted and transmitted via a `<saml:EncryptedAssertion>` element. Information intended for the consumption of the SP MUST NOT be further encrypted via `<saml:EncryptedID>` or `<saml:EncryptedAttribute>` constructs.
 
+_While encryption is viewed in some quarters as onerous or unnecessary, interopability is enhanced by uniformity. Moreover,
+a spate of recent vulnerabilities across the industry would have been almost entirely mitigated by its use, demonstrating
+that it is no longer acceptable to view it as an optional part of front-channel delivery of assertions, if it ever was._
+
 ==== Subject Identifiers
 
 [SDP-IDP12]:: Assertions MUST contain a `<saml:NameID>` element with the `urn:oasis:names:tc:SAML:2.0:nameid-format:transient` Format, as defined in <<SAML2Core>>, for the purposes of logout.
