Added Alan Buxey

--- a/edit/saml2int/contributors.adoc
+++ b/edit/saml2int/contributors.adoc
@@ -17,3 +17,4 @@
 * Keith Hazelton, keith.hazelton@wisc.edu
 * Chris Phillips, chris.phillips@canarie.ca
 * Nick Roy, nroy@internet2.edu
+* Alan Buxey, alan.buxey@myunidays.com
