--- a/edit/saml2int/notation.adoc
+++ b/edit/saml2int/notation.adoc
@@ -15,7 +15,7 @@ When referring to elements from the SAML 2.0 metadata specification <<SAML2Meta>
 
 * `<md:MetadataElement>`
 
-When referring to elements from the SAML 2.0 Metadata Extensions for Login and Discovery User Interface specification <<MetaUi>>, the following syntax is used:
+When referring to elements from the SAML 2.0 Metadata Extensions for Login and Discovery User Interface specification <<MetaUI>>, the following syntax is used:
 
 * `<mdui:MetadataElement>`
 
