--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -46,9 +46,9 @@ _An SP SHOULD NOT request a `<saml:AuthnContextClassRef>` value in the absence o
 
 [SDP-SP11]:: SPs MUST gracefully handle error responses containing `<samlp:StatusCode>` other than `urn:oasis:names:tc:SAML:2.0:status:Success`.
 
-[SDP-SP12]:: If a successful authentication response lacks sufficient or appropriate attributes for successful SP operation, the SP MUST display a meaningful status message to the user. This message SHOULD direct the user to appropriate support resources offered by the SP or, alternatively, to the `errorURL` attribute in an IdP's metadata.
+[SDP-SP12]:: If a successful authentication response lacks sufficient or appropriate attributes (including subject identifiers) for successful SP operation, the SP MUST display a meaningful status message to the user. This message SHOULD direct the user to appropriate support resources offered by the SP or, alternatively, to the `errorURL` attribute in an IdP's metadata.
 
-_There are many reasons an SP may be unable or choose not to provide service to a user based on an given authentication response. IdP's failing to release the necessary attributes is the most prevalent interoperability issue encountered in larger, general purpose federations, which is why this error case is singled out here._ 
+_There are many reasons an SP may be unable or choose not to provide service to a user based on an given authentication response. IdP's failing to release the necessary attributes is the most prevalent interoperability issue encountered in larger, general purpose federations, which is why this scenario is singled out here._ 
 
 ===== Forced Re-Authentication
 
