--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -46,9 +46,9 @@ _An SP should not request a `<saml:AuthnContextClassRef>` value in the absence o
 
 [SDP-SP11]:: SPs MUST gracefully handle error responses containing `<samlp:StatusCode>` other than `urn:oasis:names:tc:SAML:2.0:status:Success`.
 
-[SDP-SP12]:: If a successful authentication response lacks sufficient or appropriate attributes (including subject identifiers) for successful SP operation, the SP MUST display a meaningful status message to the user. This message MUST direct the user to appropriate support resources offered by the SP or, alternatively, to the `errorURL` attribute in an IdP's metadata.
+[SDP-SP12]:: If a successful authentication response lacks sufficient or appropriate SAML Attributes (including subject identifiers) for successful SP operation, the SP MUST display a meaningful status message to the user. This message MUST direct the user to appropriate support resources offered by the SP or, alternatively, to the `errorURL` attribute in an IdP's metadata.
 
-_There are many reasons an SP may be unable or choose not to provide service to a user based on an given authentication response. IdP's failing to release the necessary attributes is the most prevalent interoperability issue encountered in larger, general purpose federations, which is why this scenario is singled out here._ 
+_There are many reasons an SP may be unable or choose not to provide service to a user based on an given authentication response. IdPs failing to release the necessary SAML Attributes is the most prevalent interoperability issue encountered in larger, general purpose federations, which is why this scenario is singled out here._ 
 
 ===== Forced Re-Authentication
 
@@ -60,7 +60,7 @@ _This is necessary because clients can freely generate requests that do not spec
 
 ===== NameID Formats
 
-[SDP-SP14]:: SPs MUST NOT require the presence of a `<saml:NameID>` element and MUST NOT rely on the content of this element for long term identification of subjects;  `<saml:Attribute>` elements MUST be used for this purpose in the manner detailed below.
+[SDP-SP14]:: SPs MUST NOT require the presence of a `<saml:NameID>` element and MUST NOT rely on the content of this element for long term identification of subjects. `<saml:Attribute>` elements MUST be used for this purpose in the manner detailed below.
 
 ===== Subject Identifiers
 
@@ -90,14 +90,14 @@ _Note that scopes and IdPs do not necessarily have a 1:1 relationship; it may we
 
 The required identifier types above are opaque, unknown to users in most cases, and unsuitable for display.
 
-[SDP-SP19]:: SPs requiring the display of identifiers to users, the identification of other users via searching, selection, etc., and similar use cases SHOULD rely on additional suitable SAML Attributes such as (<<X500SAMLattr>>):
+[SDP-SP19]:: SPs requiring the display of identifiers to users, the identification of other users via searching, selection, etc., and similar use cases SHOULD rely on additional suitable SAML Attributes such as:
 
 * `urn:oid:0.9.2342.19200300.100.1.3` (mail)
 * `urn:oid:2.16.840.1.113730.3.1.241` (displayName)
 * `urn:oid:2.5.4.42` (givenName)
 * `urn:oid:2.5.4.4` (sn)
 
-_Note that most standardized Attributes of this sort tend to be defined as multi-valued._
+_Note that most standardized SAML Attributes of this sort tend to be defined as multi-valued._
 
 ==== Attribute Value Constraints
 
