--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -210,13 +210,15 @@ The ability to perform seamless key migration depends upon proper support for co
 * an `<md:SPSSODescriptor>` role element
 ** at least one `<md:AssertionConsumerService>` endpoint element
 ** at least one `<md:KeyDescriptor>` element whose `use` attribute is omitted or set to `encryption`
-** if the SP generates single logout requests: at least one `<md:KeyDescriptor>` element whose `use` attribute is omitted or set to `signing`
 * an `<md:Extensions>` element
 ** an `<mdui:UIInfo>` extension element with previously prescribed content and `<mdui:PrivacyStatementURL>`
 ** an `<mdattr:EntityAttributes>` extension element for signaling Subject Identifier requirements with previously prescribed content
 
-In addition, an SP's metadata MUST contain:
+If the SP supports the Single Logout Profile, then its metadata MUST contain (within its `<md:SPSSODescriptor>` role element):
+
+* at least one `<md:KeyDescriptor>` element whose `use` attribute is omitted or set to `signing`
+* at least one `<md:SingleLogoutService>` endpoint element (this MAY be omitted if the SP solely issues `<samlp:LogoutRequest>` messages containing the `<aslo:Asynchronous>` extension <<SAML2ASLO>>)
+
+Finally, an SP's metadata MUST also contain:
 
 * an `<md:ContactPerson>` element with a `contactType` of `technical` and an `<md:EmailAddress>` element
-
-An `<md:SingleLogoutService>` element MAY be omitted in the event that an SP either does not support the Single Logout Profile, or solely issues `<samlp:LogoutRequest>` messages containing the `<aslo:Asynchronous>` extension <<SAML2ASLO>>.
